Manifest/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-noteapp
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-noteapp
  template:
    metadata:
      labels:
        app: dotnet-noteapp
    spec:
      serviceAccountName: webapps
      containers:
        - name: dotnet-noteapp
          image: abdulrahimsheikh/noteapp:v7
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-noteapp
  namespace: webapps
spec:
  selector:
    app: dotnet-noteapp
  ports:
    - port: 80
      targetPort: 5050
  type: ClusterIP
